Bug 450737 - 5.24.2 break multi monitor setup on wayland
Summary: 5.24.2 break multi monitor setup on wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.24.2
Platform: Arch Linux Linux
: VHI major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 450871 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-23 07:48 UTC by Weng Xuetian
Modified: 2022-03-18 17:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2022-02-23 07:48:38 UTC
SUMMARY
5.24.2 may give me black screen on laptop when external monitor is plugged.
The first bad commit is 29bc1173c70b2a31753c791aa60fb33ee320440a
backends/drm: ignore enabled state of outputs for the lifetime of surfaces

STEPS TO REPRODUCE
1. plugin second monitor
2. log in into kwin

OBSERVED RESULT
laptop screen is still showing tty or blank (but not operatable). adjust systemsetting doesn't help to restore it into a usable state. Downgrade to 5.24.1 works.

EXPECTED RESULT
screen show content correctly. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  5.24.2 Archlinux
KDE Frameworks Version: 5.91.0 
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-02-24 04:54:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2067
Comment 2 Zamundaaa 2022-02-24 04:55:31 UTC
I'm relatively certain that the MR should fix it but could you test it to make sure? I don't have a multi-gpu system
Comment 3 Weng Xuetian 2022-02-24 22:12:01 UTC
(In reply to Zamundaaa from comment #2)
> I'm relatively certain that the MR should fix it but could you test it to
> make sure? I don't have a multi-gpu system

I manually cherry-pick against Plasma/5.24 and it seems to fix my issue, thanks!
Comment 4 Zamundaaa 2022-02-24 22:38:16 UTC
Git commit 85558234e1d86dc084cd2776cdb22799eaa9254b by Xaver Hugl.
Committed on 24/02/2022 at 21:48.
Pushed by zamundaaa into branch 'Plasma/5.24'.

backends/drm: fix multi gpu

In 5.24 there's still multiple egl backends, only outputs of the relevant
gpu may be handled

M  +2    -2    src/backends/drm/egl_gbm_backend.cpp

https://invent.kde.org/plasma/kwin/commit/85558234e1d86dc084cd2776cdb22799eaa9254b
Comment 5 Zamundaaa 2022-03-11 17:53:29 UTC
*** Bug 450871 has been marked as a duplicate of this bug. ***
Comment 6 Dennis Schridde 2022-03-18 17:40:24 UTC
The update has just landed in Fedora 35. I can confirm that the issue is fixed. Thanks!