backends/drm: fix multi gpu

In 5.24 there's still multiple egl backends, only outputs of the relevant
gpu may be handled

BUG: 450737